bootstrap layout markup added to index.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,27 +11,11 @@ body {
 
 main {
   display: flex;
-  flex: 1;
 }
 
-main > article {
-  flex: 1;
-  order: 1;
-}
-
-main > nav,
-main > aside {
-  flex: 0 0 20vw;
-}
-
-main > nav {
-  background: #d7e8d4;
-  order: 3;
-}
-
-main > aside {
+.fish-tips {
   background: beige;
-  order: 2;
+  flex-basis: 20vw;
 }
 
 header {
@@ -72,4 +56,19 @@ header {
 
 .fish-tips-heading {
   text-align: center;
+}
+
+.martin-info {
+  display: flex;
+  justify-content: center;
+  border: 1px dotted red;
+  padding: 1em;
+}
+
+.martin-visited {
+  border: 1px solid black;
+}
+
+.martin-quotes {
+  border: 1px solid orchid;
 }
