margin spacing added to fish list, quotes added to carousel quotes

--- a/styles/main.css
+++ b/styles/main.css
@@ -57,22 +57,10 @@ header {
   text-decoration: underline;
 }
 
-.martin-info {
+.fishList {
   margin-top: 50px;
 }
 
-.martin-visited {
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.martin-quotes {
-  border: 1px solid orchid;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.martin-info {
+  margin-top: 50px;
 }
