--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,6 @@ header {
 
 header,
 footer,
-article,
 nav,
 aside {
   padding: 1em;
@@ -59,8 +58,25 @@ header {
 
 .fishList {
   margin-top: 50px;
+  margin-left: 30px;
+  margin-bottom: 50px;
 }
 
 .martin-info {
   margin-top: 50px;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 1.25em;
+}
+
+.footer-container p:nth-of-type(1) {
+  border-right: 1px solid white;
+  padding-right: 0.75em;
+}
+
+.footer-container p:nth-of-type(2) {
+  margin-left: 10px;
 }
